cabal-version:      2.4
name:               ttadb
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ou42
maintainer:         25629874+Ou42@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ttadb
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Options

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16,
                      scotty,
                      aeson,
                      blaze-html ^>= 0.9,
                      exceptions,
                      sqlite-simple ^>= 0.4,
                      text ^>= 1.2,
                      http-types ^>= 0.12,
                      optparse-applicative ^>= 0.18,
                      unliftio-core,
                      wai-extra,
                      wai,
                      warp,
                      time

    hs-source-dirs:   app
    default-language: Haskell2010
