cabal-version:      2.4
name:               ttadb
version:            0.1.2.0

synopsis: Talk To a DataBase

description:
  A ToDo webapp written in Haskell,
  that uses Scotty, BlazeHTML, and sqlite-simple
  to interact with an SQLite Database

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ou42
maintainer:         25629874+Ou42@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ttadb
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Options

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    aeson,
                      blaze-html ^>= 0.9,
                      base ^>=4.16,
                      bytestring ^>=0.11,
                      crypton ^>=1.0.0,
                      http-types ^>= 0.12,
                      jose-jwt ^>= 0.10.0,
                      optparse-applicative ^>= 0.18,
                      scotty,
                      sqlite-simple ^>= 0.4,
                      text ^>= 1.2,
                      time,
                      unliftio,
                      wai,
                      wai-extra,
                      wai-middleware-static ^>= 0.9,
                      warp

    hs-source-dirs:   app
    default-language: Haskell2010
